<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlFee"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="12dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvFee"
        android:text="@string/fee"
        android:textSize="18dp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_below="@id/tvFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/low"
            android:textSize="14dp"
            android:textColor="@color/fee_text"
            android:minHeight="0dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/fee_btn"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/optimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/optimal"
            android:textSize="14dp"
            android:textColor="@color/fee_text"
            android:layout_marginBottom="10dp"
            android:minHeight="0dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/fee_btn"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fast"
            android:textSize="14dp"
            android:textColor="@color/fee_text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/fee_btn"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_below="@id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/send"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:minHeight="0dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/fee_btn_pressed"/>

</RelativeLayout>