<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/dlg_back"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <!--<TextView-->
    <!--android:id="@+id/tvTitle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="left"-->
    <!--android:textColor="@color/edittextBorder"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold"-->
    <!--tools:text="@string/deletetabs" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/dlg_back_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/tip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp16"
        android:text="@string/tip_1" />

    <LinearLayout
        android:id="@+id/llImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:gravity="center"
        android:background="@drawable/action_btn"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/import_str"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp14" />

        <ImageView
            android:id="@+id/ivImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_import" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnOk"
        android:paddingRight="46dp"
        android:paddingLeft="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/cool_btn"
        android:text="@string/understand"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>