<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <!--<TextView-->
    <!--android:id="@+id/tvTitle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="left"-->
    <!--android:textColor="@color/edittextBorder"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold"-->
    <!--tools:text="@string/deletetabs" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:textSize="20sp"
        android:background="@drawable/dlg_back_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/need_permission" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:text="@string/need_permission_descr" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnOk"
        android:layout_marginBottom="25dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textAllCaps="false"
        android:text="@string/ok"
        android:background="@drawable/btn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>