<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/dlg_back"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <!--<TextView-->
    <!--android:id="@+id/tvTitle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="left"-->
    <!--android:textColor="@color/edittextBorder"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold"-->
    <!--tools:text="@string/deletetabs" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/dlg_back_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/import_address" />

    <EditText
        android:id="@+id/etPrivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/edittext_backl"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        android:textColorHint="@color/hint"
        android:hint="@string/enterprivateKey" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnOk"
        android:paddingRight="46dp"
        android:paddingLeft="46dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_pressed"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>