<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dlg_back"/>

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/game_top"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivTop"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="-60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/game_title" />

    <TextView
        android:id="@+id/tvTimeLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/red_back"
        android:textSize="26dp"
        android:fontFamily="sans-serif-medium"
        android:text="29 days 7 hours" />

    <TextView
        android:id="@+id/tvDescrSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimeLeft"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/text_color"
        android:textSize="14dp"
        android:text="@string/game_till_the_end" />


    <TextView
        android:id="@+id/tvDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescrSmall"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/game_rules" />

    <LinearLayout
        android:id="@+id/llRate"
        android:layout_below="@id/tvDescr"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:elevation="10dp"
        android:background="@drawable/cool_btn"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/googleplay"/>

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rate_us"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescrLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llRate"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/text_color"
        android:textSize="14dp"
        android:text="@string/full_game_rules" />

</RelativeLayout>