<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prevfour"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="250" />


    <TextView
        android:id="@+id/btnGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_first_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="7dp"
                android:singleLine="true"
                android:maxLines="1"
                android:background="@drawable/edittext_back_tutorial"
                android:hint=""
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tvNameHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/enter_name"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIcon1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_lock" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_back_tutorial"
                android:hint="@string/pass"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tvPassHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/enter_pass"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reg"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:minHeight="0dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:minWidth="240dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/reg_back"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/change"
        android:text="@string/or_login"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/fb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:text="Register via Facebook "
        android:minWidth="240dp"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:minHeight="0dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:background="@drawable/btn"
        android:layout_marginTop="30dp" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100" />

</LinearLayout>
